--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -3,6 +3,9 @@ margin: 0;
 padding: 0;
 box-sizing: border-box;
 }
+img{
+    display: block;
+}
 
 .bg_blue{
     background-color: #2c3e50 ;
@@ -36,6 +39,11 @@ h5{
 hr{
     width: 50px;
     display: inline-block;
+}
+
+.car{
+    width: 450px;
+    padding: 0px;
 }
 
 
